--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.8.1"
+    "mongodb": "^4.8.1",
+    "nodemailer": "^6.7.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
