--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
-
 {
   "version": 2,
+  "name": "Node-Streaming-App",
   "builds": [
-      {
-          "src": "./index.js",
-          "use": "@vercel/node"
-      }
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "/"
-      }
+    {
+      "src": "/(.*)",
+      "dest": "/inde].js"
+    }
   ]
 }
